--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,21 @@
-name: Java Backend CI/CD
-
 on:
   push:
     branches:
-      - main  # Ersetzen Sie dies durch den Namen Ihres Hauptbranches
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'openjdk'
-          java-version: '21'  # Ersetzen Sie dies durch Ihre Java-Version
-
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Run Tests
-        run: mvn test
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build and Run Tests with Maven
+        run: mvn -B verify
 
       - name: Generate Test Reports
         run: mvn surefire-report:report
