--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,10 @@ jobs:
       - name: Generate Test Reports
         run: mvn surefire-report:report
 
+      - name: Upload SureFire Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: surefire-report
+          path: target/site/surefire
+
 # Fügen Sie hier weitere Schritte hinzu, um z.B. Artefakte bereitzustellen oder andere notwendige Aktionen durchzuführen
