--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: surefire-report
-          path: target/site/surefire
+          path: target/surefire-reports
 
 # Fügen Sie hier weitere Schritte hinzu, um z.B. Artefakte bereitzustellen oder andere notwendige Aktionen durchzuführen
